<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/about_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/uok_logo"
                android:contentDescription="About Image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/about_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/about_image"
                android:layout_centerVertical="true"
                android:text="About UOK Student E-Vote"
                android:textColor="@color/laven_txt"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center" />
        </RelativeLayout>

        <TextView
            android:id="@+id/about_paragraph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph4"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph5"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph6"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph7"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/about_paragraph8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph8"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/dev_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dvp_img"
            android:layout_centerVertical="true"
            android:text="Developer And Designer"
            android:textColor="@color/laven_txt"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/dvp_img"
            android:layout_width="110dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/dev"
            android:layout_gravity="center"
            android:contentDescription="About Image"

            />

        <TextView
            android:id="@+id/dvp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Millan Max"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_below="@+id/dvp_img"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>
